package structural.visitor.interfaces;

public interface Component {
  void accept(Visitor visitor);
}
