package structural.visitor.interfaces;

public interface Visitor {
  void visit(Component component);
}
